@@ -385,13 +385,10 @@ $input_properties=array(
 {"caption":"Info", "fields": [
     {"field":"title","caption":"Title","description":"Title for the image."},
     {"field":"content","caption":"Content","description":"Content of the slide (optional).","inputTV":"slide_content"},
-    {"field":"description","caption":"Description","inputTV":"slidetext"}
-]},
-{"caption":"Image", "fields":[
+    {"field":"description","caption":"Description","inputTV":"slidetext"},
     {"field":"image","caption":"Image","inputTV":"image"}
 ]}
-]
-	',
+]',
     'columns' => '[
 {"header": "Title", "width": "160", "sortable": "true", "dataIndex": "title"},
 {"header": "Image", "width": "50", "sortable": "false", "dataIndex": "image","renderer": "this.renderImage"}
